[workspace]
resolver = "2"
members = [
    # beginner tutorials
    "code/beginner/*",
    # intermediate tutorials
    "code/intermediate/*",
    "code/utils",
    # showcase
    "code/showcase/*",
    "run-wasm",
]
exclude = [
    "code/showcase/imgui-demo",
    # "code/showcase/pong",
]

[workspace.package]
edition = "2021"
rust-version = "1.71"

[workspace.dependencies.image]
version = "0.24"
default-features = false

[workspace.dependencies]
app-surface = "0.4.1"
# app-surface = { path = "../idroid/wgpu-in-app/app-surface" }
bytemuck = { version = "1.14", features = ["derive"] }
cfg-if = "1"
glam = "0.25"
env_logger = "0.10"
futures-intrusive = "0.4"
instant = "0.1"
log = "0.4"
pollster = "0.3"
rayon = "1.8"
tobj = "3.2"
winit = "0.29.10"
wgpu = { version = "0.19.1" }
# wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "445fa6019b47079c9d336881dbee1c3be3ed4c38" }
utils = { path = "code/utils" }

# wasm32 dependencies
console_error_panic_hook = "0.1.7"
console_log = "1.0"
reqwest = { version = "0.11" }
js-sys = "0.3.67"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
web-sys = "0.3.67"

# build-dependencies
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"

[profile.release]
# lto = true # VERY slightly smaller wasm
# opt-level = 's' # 10-30% smaller wasm compared to `opt-level = 3`
# opt-level = 1 # very slow and big wasm. Don't do this.
opt-level = 2 # fast and small wasm, basically same as `opt-level = 's'`
# opt-level = 3 # unecessarily large wasm for no performance gain
# debug = true # include debug symbols, useful when profiling wasm
