[workspace]
resolver = "3"
members = [
    "code/beginner/*",
    "code/intermediate/*",
    "code/integration-and-debugging/*",
    "code/utils",
    # showcase
    "code/showcase/*",
    "run-wasm",
]
exclude = ["code/showcase/imgui-demo", "code/showcase/pong"]

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies.image]
version = "0.25"
default-features = false

[workspace.dependencies]
app-surface = "1.5.1"
# app-surface = { path = "../idroid/wgpu-in-app/app-surface", default-features = false }
bytemuck = { version = "1.21", features = ["derive"] }
cfg-if = "1"
glam = "0.29"
env_logger = "0.11"
flume = "0.11"
instant = "0.1.13"
log = "0.4"
pollster = "0.4"
parking_lot = "0.12"
rayon = "1.8"
tobj = "3.2"
winit = "0.30"
wgpu = { version = "24" }
utils = { path = "code/utils" }

# wasm32 dependencies
console_error_panic_hook = "0.1.7"
console_log = "1.0"
fern = "0.7"
reqwest = { version = "0.11" }
web-sys = { version = "0.3.77", default-features = false }
wasm-bindgen = "0.2.100"
js-sys = { version = "0.3.77", default-features = false }
wasm-bindgen-futures = "0.4.50"

# build-dependencies
anyhow = "1.0"
fs_extra = "1.3"
glob = "0.3"

[profile.wasm-release]
inherits = "release"
debug = 0
# strip 设置为 true 或 "debuginfo" 对 wasm 大小没有 > 0.1 MB 的影响
strip = true
lto = "fat"
# lto = true # VERY slightly smaller wasm
# opt-level = 's' # 10-30% smaller wasm compared to `opt-level = 3`
# opt-level = 1 # very slow and big wasm. Don't do this.
opt-level = 2 # fast and small wasm, basically same as `opt-level = 's'`
# opt-level = 3 # unecessarily large wasm for no performance gain
# debug = true # include debug symbols, useful when profiling wasm
panic = "abort"
codegen-units = 1
