[package]
name = "tutorial3-pipeline"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition.workspace = true
rust-version.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.wgc]
workspace = true
features = ["raw-window-handle"]

[target.'cfg(target_arch = "wasm32")'.dependencies.wgc]
workspace = true
features = ["raw-window-handle"]
optional = true

[dependencies]
cfg-if.workspace = true
winit.workspace = true
env_logger.workspace = true
log.workspace = true
wgpu = {workspace = true}
pollster.workspace = true
app-surface.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "Document",
    "Window",
    "Element"
] }

[[example]]
name = "tutorial3-pipeline"
path = "src/main.rs"

[[example]]
name = "tutorial3-challenge"
path = "src/challenge.rs"
