[package]
name = "tutorial4-buffer"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition.workspace = true
rust-version.workspace = true

[features]
webgl = ["wgpu/webgl", "app-surface/webgl"]

[dependencies]
cfg-if.workspace = true
winit.workspace = true
env_logger.workspace = true
log.workspace = true
wgpu.workspace = true
pollster.workspace = true
app-surface.workspace = true
# NEW!
bytemuck = { workspace = true, features = ["derive"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "Document",
    "Window",
    "Element"
] }

[build-dependencies]
anyhow.workspace = true
fs_extra.workspace = true
glob.workspace = true

[[bin]]
name = "tutorial4-challenge"
path = "src/challenge.rs"
