[package]
name = "tutorial4-buffer"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition.workspace = true
rust-version.workspace = true

[features]
webgl = ["wgpu/webgl", "app-surface/webgl"]

[dependencies]
cfg-if.workspace = true
winit.workspace = true
env_logger.workspace = true
log.workspace = true
wgpu.workspace = true
app-surface.workspace = true
utils.workspace = true
# NEW!
bytemuck = { workspace = true, features = ["derive"] }

[build-dependencies]
anyhow.workspace = true
fs_extra.workspace = true
glob.workspace = true

[[bin]]
name = "tutorial4-challenge"
path = "src/challenge.rs"
