[package]
name = "tutorial5-textures"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition.workspace = true
rust-version.workspace = true

[features]
webgl = ["wgpu/webgl", "app-surface/webgl"]

[dependencies]
anyhow.workspace = true
cfg-if.workspace = true
winit.workspace = true
env_logger.workspace = true
log.workspace = true
wgpu.workspace = true
app-surface.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
utils.workspace = true

[dependencies.image]
workspace = true
features = ["png", "jpeg"]

[build-dependencies]
anyhow.workspace = true
fs_extra.workspace = true
glob.workspace = true

[[bin]]
name = "tutorial5-challenge"
path = "src/challenge.rs"
