[package]
name = "tutorial7-instancing"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
cfg-if.workspace = true
cgmath.workspace = true
winit.workspace = true
env_logger.workspace = true
log.workspace = true
wgpu.workspace = true
pollster.workspace = true
app-surface.workspace = true
bytemuck = { workspace = true, features = ["derive"] }

[dependencies.image]
workspace = true
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
wgpu = { workspace = true, features = ["webgl"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "Document",
    "Window",
    "Element"
] }

[build-dependencies]
anyhow.workspace = true
fs_extra.workspace = true
glob.workspace = true

[[example]]
name = "tutorial7-instancing"
path = "src/main.rs"


[[example]]
name = "tutorial7-challenge"
path = "src/challenge.rs"
