[package]
name = "tutorial7-instancing"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
cfg-if.workspace = true
glam.workspace = true
instant.workspace = true
winit.workspace = true
env_logger.workspace = true
log.workspace = true
wgpu.workspace = true
app-surface.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
utils.workspace = true

[dependencies.image]
workspace = true
features = ["png", "jpeg"]

[build-dependencies]
anyhow.workspace = true
fs_extra.workspace = true

[[bin]]
name = "tutorial7-challenge"
path = "src/challenge.rs"
