[package]
name = "tutorial8-depth"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition.workspace = true
rust-version.workspace = true

[features]
webgl = ["wgpu/webgl", "app-surface/webgl"]

[dependencies]
anyhow.workspace = true
app-surface.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
cfg-if.workspace = true
glam.workspace = true
env_logger.workspace = true
log.workspace = true
pollster.workspace = true
winit.workspace = true
wgpu.workspace = true

[dependencies.image]
workspace = true
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = ["Document", "Window", "Element"] }

[build-dependencies]
anyhow.workspace = true
fs_extra.workspace = true
glob.workspace = true

[[bin]]
name = "tutorial8-challenge"
path = "src/challenge.rs"
