[package]
name = "tutorial8-depth"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition.workspace = true
rust-version.workspace = true

[features]
webgl = ["wgpu/webgl", "app-surface/webgl"]

[dependencies]
anyhow.workspace = true
app-surface.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
cfg-if.workspace = true
glam.workspace = true
instant.workspace = true
env_logger.workspace = true
log.workspace = true
winit.workspace = true
wgpu.workspace = true
utils.workspace = true

[dependencies.image]
workspace = true
features = ["png", "jpeg"]

[build-dependencies]
anyhow.workspace = true
fs_extra.workspace = true
glob.workspace = true

[[bin]]
name = "tutorial8-challenge"
path = "src/challenge.rs"
