[package]
name = "tutorial9-models"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
app-surface.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
cfg-if.workspace = true
glam.workspace = true
instant.workspace = true
env_logger.workspace = true
log.workspace = true
tobj = { workspace = true, features = ["async"] }
winit.workspace = true
wgpu.workspace = true
utils.workspace = true

[dependencies.image]
workspace = true
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest.workspace = true
web-sys = { workspace = true, features = [
    "Document",
    "Window",
    "Element",
    "Location",
] }

[build-dependencies]
anyhow.workspace = true
fs_extra.workspace = true
