[package]
name = "wgpu-in-web"
version = "0.1.0"
authors = ["Jinlei Li <jinleili0@outlook.com>"]
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if.workspace = true
winit.workspace = true
env_logger.workspace = true
log.workspace = true
wgpu = { workspace = true }
pollster.workspace = true
app-surface = { workspace = true }
utils.workspace = true
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
fern.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-time.workspace = true
web-sys = { workspace = true, features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
] }
