[package]
name = "compute"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition.workspace = true

[dependencies]
app-surface.workspace = true
anyhow.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
glam.workspace = true
env_logger.workspace = true
image.workspace = true
log.workspace = true
rayon.workspace = true
tobj = "2.0"
wgpu.workspace = true
winit.workspace = true
cfg-if.workspace = true
utils.workspace = true

[build-dependencies]
anyhow.workspace = true
fs_extra.workspace = true
glob.workspace = true
rayon.workspace = true
naga = { version = "24", default-features = false, features = [
    "glsl-in",
    "wgsl-out",
] }
