[package]
name = "framework"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
app-surface.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
cfg-if.workspace = true
cgmath.workspace = true
env_logger.workspace = true
instant.workspace = true
log.workspace = true
pollster.workspace = true
winit.workspace = true
wgpu.workspace = true
thiserror = "1.0"
image.workspace = true
tobj = "2.0"

[build-dependencies]
anyhow.workspace = true
fs_extra.workspace = true
glob.workspace = true
rayon.workspace = true
naga = { workspace = true, features = ["glsl-in", "spv-out", "wgsl-out"] }
