[package]
name = "framework"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
bytemuck = { version = "1.14", features = [ "derive" ] }
glam.workspace = true
env_logger = "0.10"
pollster = "0.3"
image = "0.24.2"
log = "0.4"
tobj = "2.0"
wgpu.workspace = true
winit.workspace = true

[build-dependencies]
anyhow.workspace = true
fs_extra.workspace = true
glob = "0.3"
naga = { version = "0.9", features = ["glsl-in", "spv-out", "wgsl-out"]}
rayon.workspace = true