[package]
name = "gifs"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
app-surface.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
cfg-if.workspace = true
cgmath.workspace = true
env_logger.workspace = true
log.workspace = true
pollster.workspace = true
rayon.workspace = true
tobj.workspace = true
winit.workspace = true
wgpu.workspace = true
image.workspace = true
gif = "0.11.4"
futures-intrusive = "0.4"

framework = { version = "0.1.0", path = "../framework" }
