[package]
name = "gifs"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"


[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.12", features = ["derive"] }
glam.workspace = true
env_logger = "0.10"
pollster = "0.2"
image = "0.24.2"
log = "0.4"
tobj = "3.1"
wgpu.workspace = true
winit.workspace = true
gif = "0.11.4"
futures-intrusive = "0.4"

framework = { version = "0.1.0", path = "../framework" }
