[package]
name = "gifs"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition.workspace = true


[dependencies]
anyhow.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
glam.workspace = true
env_logger.workspace = true
pollster.workspace = true
image.workspace = true
log.workspace = true
tobj.workspace = true
wgpu.workspace = true
winit.workspace = true
gif = "0.11.4"
flume.workspace = true

framework = { version = "0.1.0", path = "../framework" }
