[package]
name = "imgui-demo"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
wgpu = "0.14"
pollster = "0.2"
imgui = "0.8"
imgui-wgpu = "0.20"
imgui-winit-support = "0.8"
framework = { path = "../framework" }
