[package]
name = "pong"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
env_logger.workspace = true
winit = "0.28.7"
anyhow.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
cgmath = "0.18"
wgpu = { version = "0.16", features = ["spirv"] }
wgpu_glyph = "0.20"
rand = "0.8"
rodio = { version = "0.16", default-features = false, features = ["wav"] }
log = "0.4"
instant = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# 需要避免在 wasm 中添加 pollster 依赖，否则会导致 wasm 加载时报错：
# An error occurred loading "XXX": TypeError: Failed to resolve module specifier "env". Relative references must start with either "/", "./", or "../".
pollster.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
console_log.workspace = true
getrandom = { version = "0.2", features = ["js"] }
rodio = { version = "0.16", default-features = false, features = [
    "wasm-bindgen",
    "wav",
] }
wasm-bindgen-futures.workspace = true
web-time.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["Document", "Window", "Element"] }
wgpu = { version = "0.16", features = ["spirv", "webgl"] }

[build-dependencies]
anyhow.workspace = true
fs_extra.workspace = true
glob.workspace = true
rayon.workspace = true
# naga 的接口有变化，用新版本得修改 build.rs
naga = { version = "0.11", features = ["glsl-in", "spv-out", "wgsl-out"] }
