[package]
name = "threading"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
anyhow.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
glam.workspace = true
env_logger.workspace = true
pollster.workspace = true
log = "0.4"
rayon.workspace = true
tobj = { version = "3.2", features = ["async"] }
wgpu.workspace = true
winit.workspace = true
instant = "0.1"
async-std = "1"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11" }
console_error_panic_hook.workspace = true
console_log.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "Document",
    "Window",
    "Element",
    "Location",
] }

[build-dependencies]
anyhow.workspace = true
fs_extra.workspace = true
glob.workspace = true