[package]
name = "threading"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app-surface.workspace = true
anyhow.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
cfg-if.workspace = true
glam.workspace = true
env_logger.workspace = true
log.workspace = true
rayon.workspace = true
tobj = { workspace = true, features = ["async"] }
wgpu.workspace = true
winit.workspace = true
instant.workspace = true
async-std = "1"
utils.workspace = true

image = { workspace = true, features = ["png", "jpeg"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# 需要避免在 wasm 中添加 pollster 依赖，否则会导致 wasm 加载时报错：
# An error occurred loading "XXX": TypeError: Failed to resolve module specifier "env". Relative references must start with either "/", "./", or "../".
pollster.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11" }
console_error_panic_hook.workspace = true
console_log.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "Document",
    "Window",
    "Element",
    "Location",
] }

[build-dependencies]
anyhow.workspace = true
fs_extra.workspace = true
glob.workspace = true
