[package]
name = "windowless"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { workspace = true, features = ["png"] }
wgpu.workspace = true
pollster.workspace = true
flume.workspace = true
